[package]
name = "feos-dft"
version = "0.1.0"
authors = ["Philipp Rehner <rehner@itt.uni-stuttgart.de>"]
edition = "2018"

[lib]
name = "feos_dft"
crate-type = ["rlib", "cdylib"]

[dependencies]
quantity = {path = "../../quantity", features = ["linalg"] }
feos-core = {path = "../feos-core" }
num-dual = {path = "../../num-dual" }
ndarray = { version = "0.15", features = ["serde", "rayon"] }
ndarray-stats = "0.5"
rustdct = "0.6"
rustfft = "6.0"
log = "0.4"
special-fun = "0.2"
ang = "0.5"
num-traits = "0.2"
numpy = { version = "0.14", optional = true }
libc = "0.2"
gauss-quad = "0.1"
petgraph = "0.6"

[dependencies.pyo3]
version = "0.14"
features = ["extension-module", "abi3", "abi3-py36"]
optional = true

[features]
default = []
python = ["pyo3", "numpy", "feos-core/python"]