[package]
name = "feos-dft"
version = "0.1.0"
authors = ["Philipp Rehner <prehner@ethz.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Generic classical DFT implementations for the `feos` project."
homepage = "https://github.com/feos-org"
readme = "README.md"
repository = "https://github.com/feos-org/feos-dft"
keywords = ["physics", "thermodynamics", "interfaces", "adsorption"]
categories = ["science"]
exclude = ["/.github/*", "*.ipynb"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./docs-header.html" ]

[dependencies]
quantity = { version = "0.4", features = ["linalg"] }
feos-core = "0.1"
num-dual = "0.4"
ndarray = { version = "0.15", features = ["serde", "rayon"] }
ndarray-stats = "0.5"
rustdct = "0.6"
rustfft = "6.0"
log = "0.4"
ang = "0.5"
num-traits = "0.2"
libc = "0.2"
gauss-quad = "0.1"
petgraph = "0.6"
numpy = { version = "0.15", optional = true }
pyo3 = { version = "0.15", optional = true }

[features]
default = []
python = ["pyo3", "numpy", "feos-core/python"]